--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,30 @@
   --primary-white-color: #e5e5e5;
 }
 
+p, h1, h2, h3, h4, h5, h6{
+  margin: 0;
+}
+ul, {
+  margin: 0; 
+  padding-left: 0;
+}
 body {
   color: var(--title-text-color);
   font-family: Roboto, sans-serif;
+}
+
+.container{
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid red
+}
+.section{
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 /*logo*/
 .logo-web {
@@ -44,7 +65,7 @@ body {
   color: var(--accent-text-color);
 }
 
-/*-----HERO-----*/
+/*-----Шапка-----*/
 .header {
   background-color: #fff;
   
@@ -116,6 +137,10 @@ body {
 .hero {
   background-color: #2f303a;
 }
+
+.hero-content{
+  padding: 200px 280px;
+}
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -124,6 +149,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+  padding: 200px 280px;
 }
 .hero-button {
   font-family: "Roboto";
@@ -131,7 +157,9 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
+  display: block;
+  margin-top: 30px;
+  margin: 0 auto;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
@@ -145,9 +173,6 @@ body {
 }
 
 /*------benefits-----*/
-.benefits {
-  background-color: #e5e5e5;
-}
 .benefits-title {
   font-weight: 700;
   font-size: 14px;
@@ -155,6 +180,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
+  margin-bottom: 10px;
 }
 .benefits-paragraf {
   font-weight: 400;
@@ -165,8 +191,9 @@ body {
 }
 
 /*------examples-----*/
-.examples {
-  background-color: #e5e5e5;
+.borders{
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .examples-title {
   font-weight: 700;
@@ -177,10 +204,12 @@ body {
 
   color: var(--title-text-color);
 }
-
 /*------team-----*/
 .team {
   background-color: #f5f4fa;
+}
+.team{
+  padding-top: 94px;
 }
 .team-title {
   font-weight: 700;
