--- a/css/styles.css
+++ b/css/styles.css
@@ -1,148 +1,34 @@
 :root {
-  --primary-text-kolor: #757575;
-  --title-text-color: #212121;
-  --accent-text-color: #2196f3;
-  --primary-white-color: #e5e5e5;
-}
+  --titles-color: #212121;
+  --light-titles-color: #ffffff;
+  --text-color: #757575;
+  --accent-color: #2196f3;
+  --logo-color: #000000;
+  --basement-logo-color: #ffffff;
+  --basement-contacts-color: rgba(255, 255, 255, 0.6);
 
-p, h1, h2, h3, h4, h5, h6{
-  margin: 0;
-}
-ul, {
-  margin: 0; 
-  padding-left: 0;
-}
-img {
-  display: block;
+  --first-bcg-color: #ffffff;
+  --sec-bcg-color: #2f303a;
+  --third-bcg-color: #f5f4fa;
+
+  --first-font-btn-color: #ffffff;
+  --sec-font-btn-color: #212121;
+  --first-bcg-btn-color: #2196f3;
+  --sec-bcg-btn-color: #188ce8;
 }
 body {
-  color: var(--title-text-color);
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-.box{
-  display: flex;
-  align-items: center;
-}
-.container{
-  width: 100%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.section{
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-/*------Header-----*/
-/*logo*/
-.logo-web {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-text-color);
-}
-
-.header-logo-footer {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #ffffff;
+.link {
   text-decoration: none;
+  color: inherit;
 }
-.header-logo-footer:hover {
-  color: var(--accent-text-color);
+.list {
+  padding: 0;
+  list-style: none;
+  margin: 0;
 }
-.header-logo:hover {
-  color: var(--accent-text-color);
-}
-
-.header {
-  background-color: #fff;
-
-}
-.header-logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-  text-decoration: none;
-}
-.header-logo{
-  margin-right: 93px;
-}
-.header-container {
-  display: flex;
-  align-items: center;
-}
-.header-nav{
-  display: flex;
-  align-items: center;
-}
-.header-list{
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  gap: 50px;
-}
-.header-connect{
-  display: flex;
-  align-items: center;
-  gap: 50px;
-}
-.header-nav .header-link {
-padding-top: 32px;
-padding-bottom: 32px;
-
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2;
-  text-decoration: none;
-}
-.header-nav .header-link:hover,
-.header-nav .header-link:focus {
-  color: var(--accent-text-color);
-}
-
-.header-nav .header-link.curnet {
-  color: var(--accent-text-color);
-}
-.header-nav .header-link.port {
-  color: var(--accent-text-color);
-}
-.header-mail {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.4px;
-  color: var(--primary-text-kolor);
-  text-decoration: none;
-}
-
-.header-mail:hover,
-.header-mail:focus {
-  color: var(--accent-text-color);
-}
-.header-tel {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.4px;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-}
-.header-tel:hover,
-.header-tel:focus {
-  color: var(--accent-text-color);
-}
-
+/* Ховаємо заголовок */
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -155,183 +41,322 @@ padding-bottom: 32px;
   clip-path: inset(50%);
   margin: -1px;
 }
-.list {
-  list-style: none;
+/*----------STUDIO PAGE-----------*/
+.title {
+  margin: 0 0 50px;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: var(--titles-color);
 }
-.list {
-  text-decoration: none;
+.section {
+  padding: 94px 0;
+}
+.conteiner {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+h1 h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-/*------Hero-----*/
+/*----------Шапка-----------*/
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: var(--first-bcg-color);
+  border-bottom: 1px solid #ececec;
+}
+.box {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--logo-color);
+}
+
+.logo-text {
+  color: var(--accent-color);
+}
+.logo {
+  margin-right: 93px;
+}
+
+.header-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.header-link:hover,
+.header-link:focus {
+  color: var(--accent-color);
+}
+
+.header-item .header-link.current {
+  color: var(--accent-color);
+}
+.contacts-list,
+.header-list {
+  gap: 50px;
+}
+.contacts-list {
+  margin-left: auto;
+}
+.header-contacts {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+}
+.header-contacts:hover,
+.header-contacts:focus {
+  color: var(--accent-color);
+}
+
+/*----------Герой-----------*/
 .hero {
-  background-color: #2f303a;
+  background-color: var(--sec-bcg-color);
+  padding: 200px 0;
 }
-
 
 .hero-title {
-    margin: 0 auto 30px;
+  margin: 0 auto 30px;
   max-width: 696px;
- 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
-  padding: 200px 280px;
+  color: var(--light-titles-color);
 }
-
 .hero-button {
-  font-family: "Roboto";
-  font-style: normal;
+  display: block;
+  min-width: 221px;
+  padding: 10px 32px;
+  margin: 0 auto;
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
-
-  text-align: center;
+  line-height: 1.88;
   letter-spacing: 0.06em;
-  background-color: var(--accent-text-color);
-  color: #ffffff
+  border-radius: 4px;
+  color: var(--first-font-btn-color);
+  background-color: var(--first-bcg-btn-color);
+  cursor: pointer;
 }
+
 .hero-button:hover,
 .hero-button:focus {
-  background-color: #188CE8;
-  color: #ffffff;
+  background-color: var(--sec-bcg-btn-color);
+  color: var(--first-font-btn-color);
+}
+/*----------Преимущетва -----------*/
+.pb-none {
+  padding-bottom: 0;
+}
+.benefits-list {
+  display: flex;
+  gap: 30px;
 }
 
-/*------benefits-----*/
-.benefits-title {
+.benefits-subtitle {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--title-text-color);
-  margin-bottom: 10px;
+  color: var(--titles-color);
 }
-.benefits-paragraf {
-  font-weight: 400;
+.benefits-text {
+  width: 270px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--primary-text-kolor);
+  color: var(--text-color);
 }
 
-/*------examples-----*/
-.borders{
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-.examples-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.31;
+/*----------Примеры работ-----------*/
+.examples {
+  background-color: var(--first-bcg-color);
   text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--title-text-color);
 }
-/*------team-----*/
+.examples-list {
+  display: flex;
+  gap: 30px;
+}
+
+/*----------Наша команда-----------*/
 .team {
-  background-color: #f5f4fa;
-}
-.team{
-  padding-top: 94px;
-}
-.team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.31;
+  background-color: var(--third-bcg-color);
   text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--title-text-color);
+}
+.team-list {
+  display: flex;
+  gap: 30px;
+}
+.team-item {
+  width: 270px;
+  display: block;
+  text-align: center;
+  padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--first-bcg-color);
 }
 
 .team-name {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.18;
+  line-height: 1.19;
+  margin-bottom: 10px;
+  margin-top: 30px;
   letter-spacing: 0.03em;
-  text-align: center;
-  color: var(--title-text-color);
+  color: var(--titles-color);
 }
-
-.team-item {
-  font-weight: 400;
+.team-text {
   font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
+  line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--primary-text-kolor);
+  color: var(--text-color);
+}
+/*----------BASEMENT------------*/
+.basement {
+  background-color: var(--sec-bcg-color);
+}
+.basement-conteiner {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 60px 15px;
+}
+.basement-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--basement-logo-color);
+}
+.logo-text {
+  color: var(--accent-color);
 }
 
-/*------footer-----*/
-.header-futer {
-  background-color: #2f303a;
+.basement-address {
+  font-style: normal;
 }
-.address-location{
-  font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-text-decoration: none;
-font-style: normal;
-  color: #ffffff;
-}
-.header-footermail,
-.header-footertel {
-  font-weight: 400;
+.basement-text {
+  display: inline-block;
+  margin-bottom: 9px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  text-decoration: none;
-  font-style: normal;
-}
-.header-footertel
-/*------Портфолиоhtml-----*/
-/*------filters-----*/
-.filtres {
-  background-color: #e5e5e5;
+  color: var(--light-titles-color);
 }
 
-.filtres-btn{
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--title-text-color);
-background: #F5F4FA;
-border-radius: 4px;
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-
+.basement-contacts {
+  display: inline-block;
+  margin-bottom: 9px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--basement-contacts-color);
 }
-.filtres-btn:focus,
-.filtres-btn:hover{
-  background-color: var(--accent-text-color);
-  color: #ffffff;
+.basement-contacts:hover,
+.basement-contacts:focus {
+  color: var(--accent-color);
 }
 
-/*------Портфолио-----*/
-.link{
-  text-decoration: none;
-  color: var(--title-text-color);
-}
-.portfolio-title {
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em
-  color: var(--title-text-color);
+/*----------PORTFOLIO PAGE-----------*/
+/*----------EXAMPLES------------*/
+.works-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
 
-.portfolio-text-title {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.82;
-letter-spacing: 0.03em;
-  color: var(--primary-text-kolor);
+.works-btn {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 6px 22px;
+  background-color: var(--third-bcg-color);
+  color: var(--titles-color);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.addmb {
+  margin: 0 auto 56px;
+}
+
+.works-btn:hover,
+.works-btn:focus {
+  color: var(--first-font-btn-color);
+  background-color: var(--first-bcg-btn-color);
+}
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.works-item {
+  width: 370px;
+  display: block;
+  text-align: center;
+  padding-bottom: 20px;
+  border: 1px solid #eeeeee;
+}
+
+.works-subtitle {
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: var(--titles-color);
+}
+
+.works-subtitle:hover,
+.works-subtitle:focus {
+  color: var(--first-bcg-btn-color);
+}
+.works-text {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+.works-text:hover,
+.works-text:focus {
+  color: var(--first-bcg-btn-color);
 }
