--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,12 @@ h6,
 p {
   margin: 0;
 }
+img {
+  display: block;
+}
 
 /*----------Шапка-----------*/
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
-
   background-color: var(--first-bcg-color);
   border-bottom: 1px solid #ececec;
 }
@@ -83,6 +83,8 @@ p {
 }
 
 .header-logo {
+  margin-right: 93px;
+
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -95,10 +97,10 @@ p {
   color: var(--accent-color);
 }
 .logo {
-  margin-right: 93px;
 }
 
 .header-link {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -225,9 +227,7 @@ p {
 }
 .team-item {
   width: 270px;
-  display: block;
   text-align: center;
-  padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -239,7 +239,6 @@ p {
   font-size: 16px;
   line-height: 1.19;
   margin-bottom: 10px;
-  margin-top: 30px;
   letter-spacing: 0.03em;
   color: var(--titles-color);
 }
@@ -249,17 +248,26 @@ p {
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
-/*----------BASEMENT------------*/
-.basement {
+.team-padding {
+  padding-top: 30px;
+  padding-right: 15px;
+  padding-bottom: 30px;
+  padding-left: 15px;
+}
+/*----------footer------------*/
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--sec-bcg-color);
 }
-.basement-conteiner {
+.conteiner {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding: 60px 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
-.basement-logo {
+.footer-logo {
   display: inline-block;
   margin-bottom: 20px;
 
@@ -275,10 +283,10 @@ p {
   color: var(--accent-color);
 }
 
-.basement-address {
+.footer-address {
   font-style: normal;
 }
-.basement-text {
+.footer-text {
   display: inline-block;
   margin-bottom: 9px;
 
@@ -287,19 +295,19 @@ p {
   letter-spacing: 0.03em;
   color: var(--light-titles-color);
 }
-
-.basement-contacts {
-  display: inline-block;
+.footer-item {
   margin-bottom: 9px;
+}
+.footer-list {
+  margin-bottom: 9px;
+}
+.footer-contacts {
+  display: inline-block;
 
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--basement-contacts-color);
-}
-.basement-contacts:hover,
-.basement-contacts:focus {
-  color: var(--accent-color);
 }
 
 /*----------PORTFOLIO PAGE-----------*/
@@ -308,6 +316,7 @@ p {
   display: flex;
   justify-content: center;
   gap: 8px;
+  margin-bottom: 50px;
 }
 
 .portfolio-btn {
@@ -324,9 +333,6 @@ p {
   border-radius: 4px;
   cursor: pointer;
 }
-.addmb {
-  margin: 0 auto 56px;
-}
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -341,10 +347,12 @@ p {
 
 .portfolio-item {
   width: 370px;
-  display: block;
-  text-align: center;
-  padding-bottom: 20px;
+}
+
+.portfilio-conteiner {
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
+  border-top: none;
 }
 
 .portfolio-subtitle {
@@ -356,17 +364,9 @@ p {
   color: var(--titles-color);
 }
 
-.portfolio-subtitle:hover,
-.portfolio-subtitle:focus {
-  color: var(--first-bcg-btn-color);
-}
 .portfolio-text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--text-color);
-}
-.portfolio-text:hover,
-.portfolio-text:focus {
-  color: var(--first-bcg-btn-color);
 }
